--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -10,6 +11,7 @@
     "body-parser": "^1.19.0",
     "downloadjs": "^1.4.7",
     "express": "^4.17.1",
+    "fontsource-roboto": "^3.0.3",
     "formdata-node": "^2.4.0",
     "multer": "^1.4.2",
     "react": "^16.13.1",
@@ -21,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:proxy": "cd proxy && node proxy.js"
+    "start:proxy": "cd proxy && nodemon proxy.js",
+    "start:all": "npm-run-all -p start start:proxy"
   },
   "proxy": "http://0.0.0.0:4000",
   "eslintConfig": {
@@ -45,6 +48,8 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.2"
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5"
   }
 }
