--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,18 @@
   "description": "Express server",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ."
+    "start": "nodemon .",
+    "start:prod": "node ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.2.0",
     "multer": "^1.4.2",
     "puppeteer": "^5.3.0"
   },
