--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
-    "multer": "^1.4.2",
-    "puppeteer": "^5.3.0"
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
