--- a/app/package.json
+++ b/app/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "downloadjs": "^1.4.7",
     "express": "^4.17.1",
     "fontsource-roboto": "^3.0.3",
     "formdata-node": "^2.4.0",
+    "helmet": "^4.2.0",
     "multer": "^1.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -23,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:proxy": "cd proxy && nodemon proxy.js",
+    "start:proxy": "cd proxy && nodemon .",
     "start:all": "npm-run-all -p start start:proxy"
   },
   "proxy": "http://0.0.0.0:4000",
