--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "downloadjs": "^1.4.7",
     "express": "^4.17.1",
     "fontsource-roboto": "^3.0.3",
-    "formdata-node": "^2.4.0",
+    "form-data": "^3.0.0",
     "helmet": "^4.2.0",
     "multer": "^1.4.2",
     "react": "^16.13.1",
